<resources>
  <string name="app_name">Zeiterfassung</string>
  <string name="LabelStartTime">Startzeit:</string>
  <string name="LabelEndTimes">Endzeit:</string>
  <string name="ButtonStart">Staren</string>
  <string name="ButtonEnd">Beenden</string>
  <string name="LabelPause">Pause:</string>
  <string name="LabelComment">Kommentar:</string>
  <string name="MenuListData">Auflistung</string>
  <string name="ColumnHeaderStartTime">Startzeit</string>
  <string name="ColumnHeaderEndTime">Endzeit</string>
  <string name="ListDataActivityTitle">Auflistung</string>
  <string name="EditDataActivityTitle">Bearbeiten</string>
  <string name="ExportDialogTitle">Export ...</string>
  <string name="ExportDialogMessage">Daten werden exportiert!</string>
  <string name="CancelButton">Abbrechen</string>
  <string name="MenuItemExport">Export</string>
  <string name="MenuItemDelete">Löschen</string>
  <string name="NewDataActivityTitle">Neuer Datansatz</string>
  <string name="MenuItemAdd">Hinzufügen</string>
  <string name="DeleteDialogTitle">Löschen</string>
  <string name="DeleteDialogMessage">Wollen Sie wirklich den Datensatz löschen?</string>
  <string name="DialogCancelButton">Abbrechen</string>
  <string name="DialogDeleteButton">Löschen</string>
  <string name="MenuItemEdit">Bearbeiten</string>
  <string name="CrashDialogText" translatable="false">Bitte schickend Sie den Absturzbericht an den Entwickler!</string>
  <string name="CrashDialogTitle" translatable="false">Zeiterfassung abgestürzt!</string>
  <string name="IssueActivityTitle">Fehlerliste</string>
  <string name="MenuItemIssues">Fehler</string>
  <string name="MenuItemLoad">Laden</string>
  <string name="LabelGps">GPS:</string>
  <string name="LabelLangitude">Länge:</string>
  <string name="LabelLatitude">Breite:</string>
  <string name="LabelAccuracy">Genauigkeit:</string>
  <string name="SonsorsActivitytitle">Sensoren</string>
  <string name="MenuItemSensors">Sensoren</string>
  <string name="LabelAcceleration">Beschleunigung:</string>
  <string name="LabelX">X:</string>
  <string name="LabelY">Y:</string>
  <string name="LabelZ">Z:</string>
  <string name="LabelImages">Bilder</string>
  <string name="CommandPhoto">Cam</string>
  <string name="CommandSelectPicture">Gal</string>
  <string name="LabelResolution">Auflösung:</string>
  <string name="SumLabelFormat">Summe: %d min</string>
  <!-- Content Provider AUTHORITY über String-Ressource definieren -->
  <!--<string name="ProviderAuthority">de.mvhs.android.zeiterfassung.provider</string>-->
</resources>
