<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:columnCount="3"
    app:layout_columnWeight="3"
    app:rowCount="10">
    <!-- GPS -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelGps"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <ToggleButton
        android:id="@+id/GpsCommand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelLangitude"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelLatitude"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelAccuracy"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <EditText
        android:id="@+id/GpsLongitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="2" />

    <EditText
        android:id="@+id/GpsLatitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="2" />

    <EditText
        android:id="@+id/GpsAccuracyValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="2" />

    <!-- Beschleunigung -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelAcceleration"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="3" />

    <ToggleButton
        android:id="@+id/AccelerationCommand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelX"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelY"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelZ"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="4" />

    <EditText
        android:id="@+id/AccXValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="5" />

    <EditText
        android:id="@+id/AccYValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="5" />

    <EditText
        android:id="@+id/AccZValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="5" />

    <!-- Kamera und Gallerie -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelImages"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="6" />

    <Button
        android:id="@+id/TakePictureCommand"
        android:text="@string/CommandPhoto"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="6" />

    <Button
        android:id="@+id/SelectPictureCommand"
        android:text="@string/CommandSelectPicture"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="6" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelResolution"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="7" />

    <TextView
        android:id="@+id/ResolutionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnSpan="2"
        app:layout_columnWeight="2"
        app:layout_row="7" />

    <ImageView
        android:id="@+id/ImageContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_column="0"
        app:layout_columnSpan="3"
        app:layout_gravity="fill"
        app:layout_row="8" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_column="0"
        app:layout_columnSpan="3"
        app:layout_row="9" />

</android.support.v7.widget.GridLayout>