<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="TimeData"
            type="de.mvhs.android.zeiterfassung.models.TimeTrackData" />
    </data>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:columnCount="2"
        app:rowCount="9">
        <!-- Start Time -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelStartTime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="0" />

        <EditText
            android:id="@+id/StartDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@{TimeData.displayStartDate}"
            android:onClick="@{TimeData::onChangeStartDate}"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <EditText
            android:id="@+id/StartTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@{TimeData.displayStartTime}"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <!-- End Time -->
        <TextView
            android:id="@+id/LabelEndDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelEndTimes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="2" />

        <EditText
            android:id="@+id/EndDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@{TimeData.displayEndDate}"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <EditText
            android:id="@+id/EndTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="@{TimeData.displayEndTime}"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <!-- Pause -->
        <TextView
            android:id="@+id/LabelPause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelPause"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="4" />

        <EditText
            android:id="@+id/PauseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@={TimeData.pause}"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="5" />

        <!-- Sum -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@{String.format(@string/SumLabelFormat,(TimeData.endTime.getTimeInMillis() - TimeData.startTime.getTimeInMillis())/1000/60 - TimeData.pause)}"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="6"/>

        <!-- Comment -->
        <TextView
            android:id="@+id/LabelComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelComment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="7" />

        <EditText
            android:id="@+id/CommentValue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="@={TimeData.comment}"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_vertical"
            app:layout_row="8" />

    </android.support.v7.widget.GridLayout>
</layout>